Revert "refactor!: diputados data handling and endpoint updates"
This reverts commit 762b25f38544e179ae7d3b46410efec7cc5fa66b.
